# SimpleChat

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  ModernChat.qrc  compile_commands.json  main.cpp  xmake.lua
.cache/clangd/index/: Login.cpp.843CDE924D60DCED.idx  Login.cpp.DAC24C0089009AA2.idx  Login.hpp.70C0A20B8E8AF342.idx  Login.hpp.8AFABD080FBA90E6.idx  LoginPage.hpp.B95F05F9D2AA4DA1.idx  ModernChat_c59c5182.cpp.2AB72F962EFDF4D9.idx  ModernChat_c59c5182.cpp.32CCD59BCF26F887.idx  ModernChat_c59c5182.cpp.9058A688C292FD25.idx  QAbstractEventDispatcher.CEB0C1BCF1F82ADF.idx  QCoreApplication.4E1969D9D7F7CC37.idx  QDate.1B2E3CD2FF259637.idx  QDateTime.1176E8D389FD038C.idx  QDebug.0B9589514A60861F.idx  QDir.0FCFBEDE3F46E32D.idx  QElapsedTimer.D1D6EBE98316D9CD.idx  QEvent.D9E752D90BAB7793.idx  QEventLoop.4B9EBC8D6C759D77.idx  QFile.9BB8C33F9B276664.idx  QFlags.65417B36818C1600.idx  QFuture.30B795F791A4523C.idx  QGuiApplication.4194BF7E187E6538.idx  QHashFunctions.128F7C012644C91B.idx  QIODevice.FD7FAC94CCD41583.idx  QJsonArray.FCABAB3272CC55C5.idx  QJsonDocument.590FD1C04E94F1B0.idx  QJsonObject.F898C6EB651883D5.idx  QLatin1String.9009DB7AB8A8DECF.idx  QList.0D2D661C78C0FBC8.idx  QLoggingCategory.1D9DAEAF2931823F.idx  QMargins.9E54A4FF5EFE5861.idx  QMatrix4x4.32255B42DC3E586A.idx  QMetaObject.FFE722F848B9B923.idx  QMetaType.00279D60A40CBAD8.idx  QMimeType.72AAB0DBA4E904FE.idx  QNetworkAccessManager.DFC2A7A566D298CD.idx  QNetworkReply.555C5AFAEB9042FE.idx  QNetworkRequest.540D681B573517CD.idx  QObject.D2CB5DEBBFF59244.idx  QPointer.7201513F181918B4.idx  QQmlApplicationEngine.F00888614208C1B6.idx  (+600 more)
.claude/: settings.local.json
android/: AndroidManifest.xml
include/Async/: QtStdexec.hpp
include/Logic/: Login.hpp  Room.hpp  RoomList.hpp  Sync.hpp
include/Utils/: LogHandler.hpp
qml/: Main.qml  qmldir
qml/components/: Avatar.qml  Badge.qml  IconButton.qml  MessageBubble.qml  MessageInput.qml  SearchField.qml  SystemMessage.qml  ThemeToggle.qml  TypingIndicator.qml
qml/models/: ConversationModel.qml  MessageModel.qml  MockData.qml
qml/pages/: ConversationView.qml  EmptyState.qml  LoginPage.qml  SettingsPage.qml
qml/sidebar/: ConversationDelegate.qml  ConversationList.qml  Sidebar.qml  SidebarHeader.qml
qml/theme/: ThemeManager.qml
src/Logic/: Login.cpp  RoomList.cpp
src/Utils/: LogHandler.cpp
xmake/: load.lua  xmake.lua
(+1 files in other folders)
